--- a/success.html
+++ b/success.html
@@ -24,7 +24,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/jumbotrons.css" rel="stylesheet">
+    <link href="public/css/jumbotrons.css" rel="stylesheet">
 
     <title>Success Page</title>
 </head>
@@ -50,7 +50,7 @@
     </svg>
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <img class="mb-4" src="images/star.png" alt="" width="100" height="">
+            <img class="mb-4" src="public/images/star.png" alt="" width="100" height="">
             <h1 class="text-body-emphasis">Successfully Signing up!</h1>
             <p class="col-lg-8 mx-auto fs-5 text-muted">
                 Thank you for subscricbed our newsletter platform <code>Capybara Newsletter</code> We hope you enjoy
