fix vercel file again

--- a/signup.html
+++ b/signup.html
@@ -111,7 +111,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="public/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
@@ -137,7 +137,7 @@
 
     <main class="form-signin w-100 m-auto">
         <form action="/" method="post">
-            <img class="mb-4" src="public/images/capybara.png" alt="" width="142" height="">
+            <img class="mb-4" src="images/capybara.png" alt="" width="142" height="">
             <h1 class="h3 mb-3 fw-normal">Sign Up to Capybara Newsletter</h1>
 
             <div class="form-floating">
