--- a/signup.html
+++ b/signup.html
@@ -111,7 +111,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
